Update
added comments to older code
Started implementation to adding a GUI to the dialogue