@@ -1,16 +1,17 @@
 package com.sintraqos.portfolioproject.output.audio;
 
 import com.sintraqos.portfolioproject.statics.*;
-import com.sintraqos.portfolioproject.statics.dialogue.DialogueListener;
+import com.sintraqos.portfolioproject.statics.dialogue.DialogueEvent;
 import com.sintraqos.portfolioproject.statics.dialogue.DialogueManager;
 import com.sintraqos.portfolioproject.statics.dialogue.DialogueObject;
+import com.sintraqos.portfolioproject.statics.dialogue.DialogueTree;
 
 import java.io.IOException;
 import java.util.*;
 
 import javax.sound.sampled.*;
 
-public class GameAudioManager implements LineListener{
+public class GameAudioManager implements LineListener {
     // Get instance
     static GameAudioManager instance;
 
@@ -25,7 +26,7 @@ public class GameAudioManager implements LineListener{
     }
 
     public Map<String, AudioClip> audioClips = new HashMap<>();
-    public Map<String, Map<String,AudioClip>> dialogueAudio = new HashMap<>();
+    public Map<String, Map<String, AudioClip>> dialogueAudio = new HashMap<>();
 
     Clip musicClip;
     Clip sfxClip;
@@ -38,13 +39,12 @@ public class GameAudioManager implements LineListener{
     AudioList ambientAudio;
     AudioList battleAudio;
 
-    private static final int BUFFER_SIZE = 4096;
-
     void setup() {
         Console.writeHeader("Setup Audio Manager");
 
-        DialogueResponder responder = new DialogueResponder();
-        DialogueManager.getInstance().addListener(responder);
+        // Add dialogue listener
+        DialogueListener listener = new DialogueListener();
+        DialogueManager.getInstance().addListener(listener);
 
         // Set volume
         masterVolume = GameSettings.getInstance().getMasterVolume();
@@ -85,7 +85,7 @@ public class GameAudioManager implements LineListener{
         Console.writeLine();
     }
 
-    public void loadAudioFiles(String dialogueFile) {
+    public void loadDialogueAudioFiles(String dialogueFile) {
         Map<String, AudioClip> audioClips = new HashMap<>();
 
         for (DialogueObject dialogueObject : DialogueManager.getInstance().getDialogueTree(dialogueFile).getDialogueObjects()) {
@@ -114,40 +114,35 @@ public class GameAudioManager implements LineListener{
         // Ship
         switch (currentLocation) {
             // Planet
-            case CURRENT_LOCATION_DANTOOINE->
+            case CURRENT_LOCATION_DANTOOINE ->
                     ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_DANTOOINE);
-            case CURRENT_LOCATION_DXUN ->
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_DXUN);
-            case CURRENT_LOCATION_KORRIBAN ->
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_KORRIBAN);
+            case CURRENT_LOCATION_DXUN -> ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_DXUN);
+            case CURRENT_LOCATION_KORRIBAN -> ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_KORRIBAN);
             case CURRENT_LOCATION_MALACHOR_V ->
                     ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_MALACHOR_V);
             case CURRENT_LOCATION_NAR_SHADDAA ->
                     ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_NAR_SHADDAA);
-            case CURRENT_LOCATION_ONDERON ->
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_ONDERON);
-            case CURRENT_LOCATION_TELOS ->
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_TELOS);
+            case CURRENT_LOCATION_ONDERON -> ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_ONDERON);
+            case CURRENT_LOCATION_TELOS -> ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_TELOS);
 
             // Ship
             case CURRENT_LOCATION_EBON_HAWK ->
                     ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_EBON_HAWK);
             case CURRENT_LOCATION_HARBINGER ->
                     ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_HARBINGER);
-            case CURRENT_LOCATION_RAVAGER ->
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_RAVAGER);
+            case CURRENT_LOCATION_RAVAGER -> ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_RAVAGER);
 
             // Other
-            case CURRENT_LOCATION_PERAGUS ->
-            {
-                    ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_PERAGUS);
-                    loadAudioFiles(ResourcePaths.PERAGUS_KREIA_DIALOGUE[0]);
-                    loadAudioFiles(ResourcePaths.PERAGUS_KREIA_DIALOGUE[1]);
+            case CURRENT_LOCATION_PERAGUS -> {
+                ambientAudio.createAudioClips(ResourcePaths.OST_AMBIENT_PREFIX_PERAGUS);
+                loadDialogueAudioFiles(ResourcePaths.PERAGUS_KREIA_DIALOGUE[0]);
+                loadDialogueAudioFiles(ResourcePaths.PERAGUS_KREIA_DIALOGUE[1]);
             }
             case CURRENT_LOCATION_BATTLE -> battleAudio.createAudioClips(ResourcePaths.OST_BATTLE_PREFIX);
         }
 
         loadedAudioFiles = true;
+        Console.writeLine("Finished loading in audio list");
     }
 
     @Override
@@ -161,18 +156,13 @@ public class GameAudioManager implements LineListener{
 
     //endregion
 
-    static class DialogueResponder implements DialogueListener {
-        @Override
-        public void onDialogueUpdate(String dialogueTreeID, DialogueObject dialogueObject){
-            GameAudioManager.getInstance().playDialogueAudio(dialogueTreeID, dialogueObject.getDialogueID());
-        }
-    }
-
-    public void playDialogueAudio(String dialogueTreeID, String dialogueID){
+    public void playDialogueAudio(String dialogueTreeID, String dialogueID) {
+        // Get the audioClip from the list
         AudioClip audioClip = dialogueAudio.get(dialogueTreeID).get(dialogueID);
-        Console.writeLine(audioClip.audioClipName);
-
-        playOneShotAudio(audioClip, Enums.audioType.AUDIO_TYPE_DIALOGUE);
+        // And play the given audioClip if it exists
+        if (audioClip != null) {
+            playOneShotAudio(audioClip, Enums.audioType.AUDIO_TYPE_DIALOGUE);
+        }
     }
 
     public void setVolume(Enums.audioType audioType, float volume) {
@@ -224,31 +214,32 @@ public class GameAudioManager implements LineListener{
             if (musicClip == null) {
                 musicClip = AudioSystem.getClip();
             }
-            playMusicAudio(musicClip, audioName, musicVolume, -1);
+            playMusicAudio(musicClip, audioName, musicVolume);
 
         } catch (LineUnavailableException ex) {
             throw new Functions.ExceptionHandler("Failed play audio clip", ex);
         }
     }
 
-    void stopAudio(String audioName){
+    void stopAudio(String audioName) {
         audioClips.get(audioName).reset();
     }
 
-    void playMusicAudio(Clip clip, String audioName, float audioVolume, int loopCount) {
-
-            if (clip.isActive() || clip.isRunning()) {
-                clip.close();
-            }
+    void playMusicAudio(Clip clip, String audioName, float audioVolume) {
+        // If the current clip is currently playing stop, and close it
+        if (clip.isActive() || clip.isRunning()) {
+            clip.close();
+        }
         try {
+            // Open the audioClip
             clip.open(audioClips.get(audioName).audioInputStream);
 
-            setVolume(clip, audioVolume);
-            clip.loop(loopCount);
-            clip.start();
+            setVolume(clip, audioVolume);   // Set the volume
+            clip.loop(-1);            // Set the loop count
+            clip.start();                   // And finally start the audioClip
             Console.writeLine("Playing: " + audioName);
         } catch (LineUnavailableException | IOException ex) {
-            throw new Functions.ExceptionHandler("Failed to play new audioclip",ex);
+            throw new Functions.ExceptionHandler("Failed to play new audio clip", ex);
         }
     }
 
@@ -259,7 +250,7 @@ public class GameAudioManager implements LineListener{
 
     public void playOneShotAudio(AudioClip audioClip, Enums.audioType audioType) {
         GameSettings settings = GameSettings.getInstance();
-        float audioVolume = 0;
+        float audioVolume;
         switch (audioType) {
             case AUDIO_TYPE_MUSIC -> audioVolume = settings.getMusicVolume();
             case AUDIO_TYPE_SFX -> audioVolume = settings.getSfxVolume();
@@ -268,13 +259,14 @@ public class GameAudioManager implements LineListener{
         }
 
         new Thread(new OneShotAudioTask(audioClip.audioInputStream, audioVolume)).start();
+        Console.writeLine("Playing one-shot audioClip: " + audioClip.getAudioClipName());
     }
 
     public void setVolume(Clip clip, float volume) {
-        volume = Math.max(0, Math.min(1, volume));
+        float clampedVolume = Math.clamp(volume, 0, 1); // Clamp volume between 0 and 1
 
         FloatControl volumeControl = (FloatControl) clip.getControl(FloatControl.Type.MASTER_GAIN);
-        volumeControl.setValue(20f * (float) Math.log10(volume));
+        volumeControl.setValue(20f * (float) Math.log10(clampedVolume));
     }
 
     static class OneShotAudioTask implements Runnable {
@@ -289,7 +281,6 @@ public class GameAudioManager implements LineListener{
                 clip.addLineListener(new CloseClipWhenDone());
                 GameAudioManager.getInstance().setVolume(clip, audioVolume);
                 clip.start();
-                audioInputStream.reset();
             } catch (LineUnavailableException | IOException ex) {
                 Thread.currentThread().interrupt();
                 throw new Functions.ExceptionHandler("Failed play audio clip", ex);
@@ -301,18 +292,42 @@ public class GameAudioManager implements LineListener{
             this.audioVolume = audioVolume;
         }
 
-        private static class CloseClipWhenDone implements LineListener
-        {
-            @Override public void update(LineEvent event)
-            {
-                if (event.getType().equals(LineEvent.Type.STOP))
-                {
+        private static class CloseClipWhenDone implements LineListener {
+            @Override
+            public void update(LineEvent event) {
+                if (event.getType().equals(LineEvent.Type.STOP)) {
                     Line soundClip = event.getLine();
                     soundClip.close();
                 }
             }
         }
     }
+
+    //region Events
+
+    static class DialogueListener implements DialogueEvent {
+
+        @Override
+        public void onDialogueSetup(DialogueTree dialogueTree){
+            GameAudioManager.getInstance().loadAudioFiles(dialogueTree.getDialogueTreeLocation());
+        }
+
+        @Override
+        public void onDialogueStart(DialogueTree dialogueTree) {
+        }
+
+        @Override
+        public void onDialogueUpdate(String dialogueTreeID, DialogueObject dialogueObject) {
+            GameAudioManager.getInstance().playDialogueAudio(dialogueTreeID, dialogueObject.getDialogueID());
+        }
+
+        @Override
+        public void onDialogueEnd() {
+            // TODO: get current dialogue audio, music etc and stop them
+        }
+    }
+
+    //endregion
 
     //region Dispose
 
